ORCH-539 Move to Java 17 (#257)
Co-authored-by: Claude <noreply@anthropic.com>